crates/tests/fixtures/harness/data/error/winrt_struct_field_non_winrt_type/input.rdl

#[winrt]
mod Test {
    struct WinRtPoint {
        a: Win32Rect,
    }
}
#[win32]
mod Test {
    struct Win32Rect { x: i32, }
}
